<resources>
    <string name="app_name">TruckPad Case</string>
    <string name="title_calculate_freight">Calcular Frete</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Calcular</string>
    <string name="title_search_history">Histórico</string>
    <string name="hint_city_of_origin">Local de origem</string>
    <string name="hint_city_of_destiny">Local de destino</string>
    <string name="hint_fuel_price_per_liter">Preço/litro diesel</string>
    <string name="hint_consumption">Consumo (km/L)</string>
    <string name="num_eixos">Número de eixos</string>
    <string name="calculate">CALCULAR</string>
    <string name="place_not_found">Local não encontrado, tente novamente</string>
    <string name="select_a_place">Selecione um local</string>
    <string name="invalid_axis_number_error">Insira uma quantidade entre 2 e 9</string>
    <string name="internal_search_error">Erro ao realizar busca por local, tente novamente</string>
    <string name="server_error">Erro ao calcular rotas, tente novamente</string>
    <string name="insert_a_destiny">Insira um destino válido</string>
    <string name="lbl_origin">Origem:</string>
    <string name="lbl_destiny">Destino:</string>
    <string name="lbl_axis">Eixos:</string>
    <string name="lbl_distance">Distância:</string>
    <string name="lbl_duration">Duração:</string>
    <string name="lbl_toll">Pedágio:</string>
    <string name="lbl_necessary_fueld">Combustível necessário:</string>
    <string name="lbl_total_fuel">Total de combustível:</string>
    <string name="lbl_total">Total:</string>
    <string name="lbl_general">Geral:</string>
    <string name="lbl_bulk">Granel:</string>
    <string name="lbl_neobulk">Neogranel:</string>
    <string name="lbl_fridged">Frigorificada:</string>
    <string name="lbl_dangerous">Perigosa:</string>
    <string name="lbl_toll_values">Tabela Frete - Preços Mínimos - ANTT</string>
    <string name="lbl_fuel_price">Preço diesel</string>
    <string name="insert_a_value">Insira um valor</string>
    <string name="no_calc_history">Não há histórico de cálculos de frete</string>
    <string name="results">Resultados</string>
    <string name="error_get_current_location">Error ao buscar localização atual, tente novamente</string>
    <string name="need_to_allow_location">É necessário permissão de localização para utilizar este recurso</string>
</resources>
